applied required changes

--- a/index.html
+++ b/index.html
@@ -30,29 +30,23 @@
                         Filter by Region <span><i class="fa-solid fa-chevron-down"></i></span>
                     </button>
                     <button class="select-region" hidden>
-                        <p>africa</p>
+                        <ul>
+                            <li>africa</li>
+                            <li>america</li>
+                            <li>asia</li>
+                            <li>europe</li>
+                            <li>oceania</li>
+                        </ul>
+                        <!-- <p>africa</p>
                         <p>america</p>
                         <p>asia</p>
                         <p>europe</p>
-                        <p>oceania</p>
+                        <p>oceania</p> -->
                     </button>
                 </div>
             </div>
 
             <div class="bottom-main"> 
-                <!-- <a href="jhkjhgnyubnuy">
-                    <article class="recent-countries">
-                        <div class="flag">
-                            <img src="https://flagcdn.com/af.svg" alt="Afghanistan flag">
-                        </div>
-                        <div class="info">
-                            <h4>Afghanistan</h4>
-                            <p>Population: <span>27,657,145</span></p>
-                            <p>Region: <span>Asia</span></p>
-                            <p>Capital: <span>Kabul</span></p>
-                        </div>
-                    </article>
-                </a> -->
             </div>
         </div>
     </div>
